--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation 'com.android.support:cardview-v7:26.0.0-beta2'
     implementation 'com.android.support:support-v4:26.0.0-beta2'
+    compile 'org.jsoup:jsoup:1.10.3'
 }
 repositories {
     mavenCentral()
