--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     implementation 'com.android.support:cardview-v7:26.0.0-beta2'
     implementation 'com.android.support:support-v4:26.0.0-beta2'
     compile 'org.jsoup:jsoup:1.10.3'
+    compile "io.reactivex.rxjava2:rxjava:2.0.1"
 }
 repositories {
     mavenCentral()
