--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,12 +5,12 @@ apply plugin: 'kotlin-kapt'
 
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion "26.0.0"
+    compileSdkVersion 25
+    buildToolsVersion "25.0.1"
     defaultConfig {
         applicationId "io.github.listen1"
         minSdkVersion 15
-        targetSdkVersion 26
+        targetSdkVersion 25
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -34,15 +34,15 @@ dependencies {
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    implementation 'com.android.support:appcompat-v7:26.0.0-beta2'
+    implementation 'com.android.support:appcompat-v7:25.1.0'
     testImplementation 'junit:junit:4.12'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    implementation 'com.android.support:design:26.0.0-beta2'
-    implementation 'com.android.support:support-vector-drawable:26.0.0-beta2'
+    implementation 'com.android.support:design:25.1.0'
+    implementation 'com.android.support:support-vector-drawable:25.1.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    implementation 'com.android.support:cardview-v7:26.0.0-beta2'
-    implementation 'com.android.support:support-v4:26.0.0-beta2'
+    implementation 'com.android.support:cardview-v7:25.1.0'
+    implementation 'com.android.support:support-v4:25.1.0'
     //jsoup
     compile 'org.jsoup:jsoup:1.10.3'
     //rxjava rxandroid
